--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -2,3 +2,11 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+:root {
+  --primary: #FFFF00;
+  --secondary: #1B5E20;
+  --secondaryligthen: #66BB6A;
+  --redlighten1: #EF5350;
+  --indigodarken3: #283593;
+  --bluedarken1: #1E88E5;
+}
